// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get core and supplementary resources grouped by types 1`] = `
[
  {
    "id": "urn:resourcetype:learningPath",
    "name": "Læringssti",
    "resources": [
      {
        "contentUri": "urn:article:1",
        "id": "urn:resource:2",
        "name": "Hva er en idé?",
        "resourceTypes": [
          {
            "id": "urn:resourcetype:subjectMaterial",
          },
          {
            "id": "urn:resourcetype:learningPath",
          },
        ],
      },
    ],
  },
  {
    "id": "urn:resourcetype:subjectMaterial",
    "name": "Fagstoff",
    "resources": [
      {
        "contentUri": "urn:learningpath:1",
        "id": "urn:resource:1",
        "name": "Teknikker for idéutvikling",
        "resourceTypes": [
          {
            "id": "urn:resourcetype:subjectMaterial",
          },
        ],
      },
      {
        "contentUri": "urn:article:1",
        "id": "urn:resource:2",
        "name": "Hva er en idé?",
        "resourceTypes": [
          {
            "id": "urn:resourcetype:subjectMaterial",
          },
          {
            "id": "urn:resourcetype:learningPath",
          },
        ],
      },
      {
        "contentUri": "urn:article:2",
        "id": "urn:resource:3",
        "name": "Ideer og idéutvikling",
        "resourceTypes": [
          {
            "id": "urn:resourcetype:subjectMaterial",
          },
          {
            "id": "urn:resourcetype:academicArticle",
          },
        ],
      },
      {
        "additional": true,
        "contentUri": "urn:article:3",
        "id": "urn:resource:4",
        "name": "Hva er menneskerettigheter?",
        "resourceTypes": [
          {
            "id": "urn:resourcetype:subjectMaterial",
          },
        ],
      },
      {
        "additional": true,
        "contentUri": "urn:article:2",
        "id": "urn:resource:6",
        "name": "Endring av NATOs strategi",
        "resourceTypes": [
          {
            "id": "urn:resourcetype:subjectMaterial",
          },
          {
            "id": "urn:resourcetype:academicArticle",
          },
        ],
      },
    ],
    "subtypes": [
      {
        "id": "urn:resourcetype:academicArticle",
        "name": "Fagartikkel",
      },
      {
        "id": "urn:resourcetype:movieAndClip",
        "name": "Film og filmklipp",
      },
      {
        "id": "urn:resourcetype:simulation",
        "name": "Simulering",
      },
    ],
  },
  {
    "id": "urn:resourcetype:tasksAndActivities",
    "name": "Oppgaver og aktiviteter",
    "resources": [
      {
        "additional": true,
        "contentUri": "urn:article:4",
        "id": "urn:resource:5",
        "name": "Påstander konflikter",
        "resourceTypes": [
          {
            "id": "urn:resourcetype:tasksAndActivities",
          },
        ],
      },
    ],
    "subtypes": [
      {
        "id": "urn:resourcetype:exercise",
        "name": "Øvelse",
      },
      {
        "id": "urn:resourcetype:task",
        "name": "Oppgave",
      },
      {
        "id": "urn:resourcetype:workAssignment",
        "name": "Arbeidsoppdrag",
      },
    ],
  },
]
`;

exports[`get core resources grouped by types 1`] = `
[
  {
    "id": "urn:resourcetype:learningPath",
    "name": "Læringssti",
    "resources": [
      {
        "contentUri": "urn:article:1",
        "id": "urn:resource:2",
        "name": "Hva er en idé?",
        "resourceTypes": [
          {
            "id": "urn:resourcetype:subjectMaterial",
          },
          {
            "id": "urn:resourcetype:learningPath",
          },
        ],
      },
    ],
  },
  {
    "id": "urn:resourcetype:subjectMaterial",
    "name": "Fagstoff",
    "resources": [
      {
        "contentUri": "urn:learningpath:1",
        "id": "urn:resource:1",
        "name": "Teknikker for idéutvikling",
        "resourceTypes": [
          {
            "id": "urn:resourcetype:subjectMaterial",
          },
        ],
      },
      {
        "contentUri": "urn:article:1",
        "id": "urn:resource:2",
        "name": "Hva er en idé?",
        "resourceTypes": [
          {
            "id": "urn:resourcetype:subjectMaterial",
          },
          {
            "id": "urn:resourcetype:learningPath",
          },
        ],
      },
      {
        "contentUri": "urn:article:2",
        "id": "urn:resource:3",
        "name": "Ideer og idéutvikling",
        "resourceTypes": [
          {
            "id": "urn:resourcetype:subjectMaterial",
          },
          {
            "id": "urn:resourcetype:academicArticle",
          },
        ],
      },
    ],
    "subtypes": [
      {
        "id": "urn:resourcetype:academicArticle",
        "name": "Fagartikkel",
      },
      {
        "id": "urn:resourcetype:movieAndClip",
        "name": "Film og filmklipp",
      },
      {
        "id": "urn:resourcetype:simulation",
        "name": "Simulering",
      },
    ],
  },
]
`;

exports[`resources types sort order 1`] = `
[
  {
    "id": "urn:resourcetype:learningPath",
    "name": "Læringssti",
  },
  {
    "id": "urn:resourcetype:subjectMaterial",
    "name": "Fagstoff",
    "subtypes": [
      {
        "id": "urn:resourcetype:academicArticle",
        "name": "Fagartikkel",
      },
      {
        "id": "urn:resourcetype:movieAndClip",
        "name": "Film og filmklipp",
      },
      {
        "id": "urn:resourcetype:simulation",
        "name": "Simulering",
      },
    ],
  },
  {
    "id": "urn:resourcetype:tasksAndActivities",
    "name": "Oppgaver og aktiviteter",
    "subtypes": [
      {
        "id": "urn:resourcetype:exercise",
        "name": "Øvelse",
      },
      {
        "id": "urn:resourcetype:task",
        "name": "Oppgave",
      },
      {
        "id": "urn:resourcetype:workAssignment",
        "name": "Arbeidsoppdrag",
      },
    ],
  },
  {
    "id": "urn:resourcetype:reviewResource",
    "name": "Vurderingsressurs",
  },
  {
    "id": "urn:resourcetype:SourceMaterial",
    "name": "Kildemateriale",
  },
  {
    "id": "urn:resourcetype:concept",
    "name": "Forklaring",
  },
]
`;
